--- a/package.json
+++ b/package.json
@@ -5,11 +5,32 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.vue",
+      "!**/node_modules/**"
+    ]
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "core-js": "^3.6.5",
+    "jest": "^26.6.3",
+    "node-sass": "^7.0.1",
     "vue": "^2.6.14",
+    "vue-jest": "^3.0.7",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
@@ -20,6 +41,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^1.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.2",
