--- a/package.json
+++ b/package.json
@@ -8,30 +8,19 @@
     "lint": "vue-cli-service lint",
     "test": "jest"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "vue"
-    ],
-    "transform": {
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
-    },
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/*.vue",
-      "!**/node_modules/**"
-    ]
-  },
   "dependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "jest": "^26.6.3",
     "node-sass": "^7.0.1",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.0",
     "vue-jest": "^3.0.7",
     "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.7",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -48,7 +37,9 @@
     "less-loader": "^10.2.0",
     "sass": "^1.50.1",
     "sass-loader": "^12.6.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -68,5 +59,20 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.vue",
+      "!**/node_modules/**"
+    ]
+  }
 }
