--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "jest": "^26.6.3",
+    "material-design-icons-iconfont": "^6.7.0",
+    "node": "^17.7.2",
     "node-sass": "^7.0.1",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.0",
@@ -28,6 +31,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^1.3.0",
